k8s/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: devopswithai-destrules
  namespace: default
spec:
  host: "*.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL # Enables mTLS between services
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-destrule
  namespace: default
spec:
  host: devopswithai-service
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: search-api-destrule
  namespace: default
spec:
  host: search-api-service
  subsets:
  - name: v1
    labels:
      version: v1
